5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4432/executions/1633_2921.log
== TEST (2019-04-02 18:40:16) 
-- CODE:
a=float(input("valor do primeiro jogo:   ")
b=float(input("valor do segundo jogo:     "
jb=b-(b*(25/100))
print(round(jb))
-- ERROR:
File "XXXX", line 2
    b=float(input("valor do segundo jogo:     "
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:40:21) 
-- CODE:
a=float(input("valor do primeiro jogo:   ")
b=float(input("valor do segundo jogo:     ")
jb=b-(b*(25/100))
print(round(jb))
-- ERROR:
File "XXXX", line 2
    b=float(input()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:40:47) 
-- CODE:
a=float(input("valor do primeiro jogo:   ")
b=float(input("valor do segundo jogo:")
jb=b-(b*(25/100))
print(round(jb))
-- ERROR:
File "XXXX", line 2
    b=float(input()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:40:49) 
-- CODE:
a=float(input("valor do primeiro jogo:   ")
b=float(input("valor do segundo jogo:")
jb=b-(b*(25/100))
print(round(jb))
-- ERROR:
File "XXXX", line 2
    b=float(input()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:41:18) 
-- CODE:
a=float(input("valor do primeiro jogo:   ")
b=float(input("valor do segundo jogo:")
jb=b-(b*(25/100))
print(round(jb))
-- ERROR:
File "XXXX", line 2
    b=float(input()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:41:38) 
-- CODE:
a=float(input("valor do primeiro jogo:   "))
b=float(input("valor do segundo jogo:"))
jb=b-(b*(25/100))
print(round(jb))
-- OUTPUT:
67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:41:55) 
-- CODE:
a=float(input("valor do primeiro jogo:   "))
b=float(input("valor do segundo jogo:"))
jb=b-(b*(25/100))
print(round(jb,2))
-- OUTPUT:
66.94
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:42:16) 
-- CODE:
a=float(input("valor do primeiro jogo:   "))
b=float(input("valor do segundo jogo:"))
jb=b-(b*(25/100))
print(round(jb,2))
print(a)
-- OUTPUT:
66.94
142.35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:42:23) 
-- CODE:
a=float(input("valor do primeiro jogo:   "))
b=float(input("valor do segundo jogo:"))
jb=b-(b*(25/100))
print(round(jb,2))
print(a)
-- EXECUTION TIME:
0.209077
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
66.94
142.35
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
82.49
99.99
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
64.4
102.12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:42:25) 
-- CODE:
a=float(input("valor do primeiro jogo:   "))
b=float(input("valor do segundo jogo:"))
jb=b-(b*(25/100))
print(round(jb,2))
print(a)
-- EXECUTION TIME:
0.156545
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
66.94
142.35
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
82.49
99.99
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
64.4
102.12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:42:40) 
-- CODE:
a=float(input("valor do primeiro jogo:   "))
b=float(input("valor do segundo jogo:"))
jb=b-(b*(25/100))
print(round(jb,2))
print(round(a,2)
-- EXECUTION TIME:
0.17573
-- ERROR:
  File "/home/codebench/codes/1633/2921/main.py", line 6
    
                    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:42:41) 
-- CODE:
a=float(input("valor do primeiro jogo:   "))
b=float(input("valor do segundo jogo:"))
jb=b-(b*(25/100))
print(round(jb,2))
print(round(a,2)
-- EXECUTION TIME:
0.130049
-- ERROR:
  File "/home/codebench/codes/1633/2921/main.py", line 6
    
                    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:42:41) 
-- CODE:
a=float(input("valor do primeiro jogo:   "))
b=float(input("valor do segundo jogo:"))
jb=b-(b*(25/100))
print(round(jb,2))
print(round(a,2)
-- ERROR:
File "XXXX", line 6
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:42:42) 
-- CODE:
a=float(input("valor do primeiro jogo:   "))
b=float(input("valor do segundo jogo:"))
jb=b-(b*(25/100))
print(round(jb,2))
print(round(a,2)
-- ERROR:
File "XXXX", line 6
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:42:48) 
-- CODE:
a=float(input("valor do primeiro jogo:   "))
b=float(input("valor do segundo jogo:"))
jb=b-(b*(25/100))
print(round(jb,2))
print(round(a,2))
-- OUTPUT:
66.94
142.35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:43:04) 
-- CODE:
a=float(input("valor do primeiro jogo:   "))
b=float(input("valor do segundo jogo:"))
jb=b-(b*(25/100))
print(round(jb,2))
print(round(a,2))
-- EXECUTION TIME:
0.213505
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
66.94
142.35
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
82.49
99.99
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
64.4
102.12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:43:05) 
-- CODE:
a=float(input("valor do primeiro jogo:   "))
b=float(input("valor do segundo jogo:"))
jb=b-(b*(25/100))
print(round(jb,2))
print(round(a,2))
-- EXECUTION TIME:
0.143804
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
66.94
142.35
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
82.49
99.99
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
64.4
102.12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:43:05) 
-- CODE:
a=float(input("valor do primeiro jogo:   "))
b=float(input("valor do segundo jogo:"))
jb=b-(b*(25/100))
print(round(jb,2))
print(round(a,2))
-- EXECUTION TIME:
0.246618
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
66.94
142.35
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
82.49
99.99
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
64.4
102.12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:43:17) 
-- CODE:
a=float(input("valor do primeiro jogo:   "))
b=float(input("valor do segundo jogo:"))
jb=b-(b*(25/100))
print(round(jb,2))
print(round(a,2))
-- EXECUTION TIME:
0.180308
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
66.94
142.35
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
82.49
99.99
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
64.4
102.12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:43:17) 
-- CODE:
a=float(input("valor do primeiro jogo:   "))
b=float(input("valor do segundo jogo:"))
jb=b-(b*(25/100))
print(round(jb,2))
print(round(a,2))
-- EXECUTION TIME:
0.168688
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
82.49
99.99
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
64.4
102.12
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:43:19) 
-- CODE:
a=float(input("valor do primeiro jogo:   "))
b=float(input("valor do segundo jogo:"))
jb=b-(b*(25/100))
print(round(jb,2))
print(round(a,2))
-- EXECUTION TIME:
0.161884
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
66.94
142.35
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
66.94
142.35
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
66.94
142.35
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:43:19) 
-- CODE:
a=float(input("valor do primeiro jogo:   "))
b=float(input("valor do segundo jogo:"))
jb=b-(b*(25/100))
print(round(jb,2))
print(round(a,2))
-- EXECUTION TIME:
0.153352
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
66.94
142.35
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:

-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
66.94
142.35
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:43:20) 
-- CODE:
a=float(input("valor do primeiro jogo:   "))
b=float(input("valor do segundo jogo:"))
jb=b-(b*(25/100))
print(round(jb,2))
print(round(a,2))
-- EXECUTION TIME:
0.183569
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
66.94
142.35
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
valor do primeiro jogo:   valor do segundo jogo:82.49
99.99
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
66.94
142.35
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:43:20) 
-- CODE:
a=float(input("valor do primeiro jogo:   "))
b=float(input("valor do segundo jogo:"))
jb=b-(b*(25/100))
print(round(jb,2))
print(round(a,2))
-- EXECUTION TIME:
0.195237
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
64.4
102.12
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:

-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
82.49
99.99
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:43:20) 
-- CODE:
a=float(input("valor do primeiro jogo:   "))
b=float(input("valor do segundo jogo:"))
jb=b-(b*(25/100))
print(round(jb,2))
print(round(a,2))
-- EXECUTION TIME:
0.376481
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
66.94
142.35
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
82.49
99.99
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
64.4
102.12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:43:20) 
-- CODE:
a=float(input("valor do primeiro jogo:   "))
b=float(input("valor do segundo jogo:"))
jb=b-(b*(25/100))
print(round(jb,2))
print(round(a,2))
-- EXECUTION TIME:
0.344482
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
64.4
102.12
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:

-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
64.4
102.12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:43:20) 
-- CODE:
a=float(input("valor do primeiro jogo:   "))
b=float(input("valor do segundo jogo:"))
jb=b-(b*(25/100))
print(round(jb,2))
print(round(a,2))
-- EXECUTION TIME:
0.364479
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
64.4
102.12
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:

-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:44:31) 
-- CODE:
a=float(input("valor do primeiro jogo:   "))
b=float(input("valor do segundo jogo:"))
jb=b-(b*(25/100))
print(round(jb,2))
print(round(a,2))
-- OUTPUT:
66.94
142.35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:44:40) 
-- CODE:
a=float(input("valor do primeiro jogo:   "))
b=float(input("valor do segundo jogo:"))
jb=b-(b*(25/100))
print(round(jb,2))
print(round(a,2))
-- EXECUTION TIME:
0.186923
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
66.94
142.35
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
82.49
99.99
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
64.4
102.12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:44:41) 
-- CODE:
a=float(input("valor do primeiro jogo:   "))
b=float(input("valor do segundo jogo:"))
jb=b-(b*(25/100))
print(round(jb,2))
print(round(a,2))
-- EXECUTION TIME:
0.239358
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
66.94
142.35
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
82.49
99.99
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
64.4
102.12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:45:18) 
-- CODE:
a=float(input("valor do primeiro jogo:   "))
b=float(input("valor do segundo jogo:"))
jb=b-(b*(25/100))
print(round(jb,2))
c=a+jb
print(round(c,2))
-- EXECUTION TIME:
0.177542
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
66.94
209.29
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
82.49
182.48
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
64.4
166.52
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:45:19) 
-- CODE:
a=float(input("valor do primeiro jogo:   "))
b=float(input("valor do segundo jogo:"))
jb=b-(b*(25/100))
print(round(jb,2))
c=a+jb
print(round(c,2))
-- EXECUTION TIME:
0.145738
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
66.94
209.29
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
82.49
182.48
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
64.4
166.52
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
